add stuff in the modal

--- a/data-echoes/src/assets/scss/base.css
+++ b/data-echoes/src/assets/scss/base.css
@@ -41,13 +41,17 @@
   box-sizing: border-box;
 }
 
+html,
+body,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6,
-p {
+p,
+ul,
+li {
   margin: 0;
 }
 
@@ -99,7 +103,8 @@ a:hover {
   cursor: pointer;
 }
 
-html,
-body {
-  margin: 0;
+ul,
+li {
+  padding: 0;
+  list-style-type: none;
 }
