comment for now unused fonts, fix last type errors

--- a/data-echoes/src/assets/scss/nostalgia.scss
+++ b/data-echoes/src/assets/scss/nostalgia.scss
@@ -1,7 +1,7 @@
-@font-face {
-  font-family: Jomhuria;
-  src: url('@/assets/fonts/Jomhuria-Regular.ttf') format('truetype');
-}
+// @font-face {
+//   font-family: Jomhuria;
+//   src: url('@/assets/fonts/Jomhuria-Regular.ttf') format('truetype');
+// }
 
 @font-face {
   font-family: VinaSans;
