--- a/data-echoes/src/assets/scss/main.scss
+++ b/data-echoes/src/assets/scss/main.scss
@@ -1,15 +1,15 @@
 @import './base.css';
 @import './colors.scss';
 
-@font-face {
-  font-family: AnnieUseYourTelescope;
-  src: url('@/assets/fonts/AnnieUseYourTelescope-Regular.ttf') format('truetype');
-}
+// @font-face {
+//   font-family: AnnieUseYourTelescope;
+//   src: url('@/assets/fonts/AnnieUseYourTelescope-Regular.ttf') format('truetype');
+// }
 
-@font-face {
-  font-family: LoveYaLikeASister;
-  src: url('@/assets/fonts/LoveYaLikeASister-Regular.ttf') format('truetype');
-}
+// @font-face {
+//   font-family: LoveYaLikeASister;
+//   src: url('@/assets/fonts/LoveYaLikeASister-Regular.ttf') format('truetype');
+// }
 
 @font-face {
   font-family: WaitingfortheSunrise;
