fun with intro animation

--- a/data-echoes/src/assets/scss/colors.scss
+++ b/data-echoes/src/assets/scss/colors.scss
@@ -5,4 +5,15 @@
   --off-white-10: #eeeeee11;
 
   --off-black: #101010;
+
+  --home-yellow: rgba(208, 169, 52, 1);
+  --home-yellow-80: rgba(208, 169, 52, 0.8);
+  --home-yellow-40: rgba(208, 169, 52, 0.4);
+
+  --home-green-90: rgba(20, 117, 110, 0.9);
+  --home-green-50: rgba(20, 117, 110, 0.5);
+  --home-green-light: rgb(195, 233, 231);
+
+  --home-blue-90: rgba(8, 56, 119, 0.9);
+  --home-blue-50: rgba(8, 56, 119, 0.5);
 }
