--- a/data-echoes/src/assets/scss/molecules.scss
+++ b/data-echoes/src/assets/scss/molecules.scss
@@ -3,3 +3,15 @@
     @content;
   }
 }
+
+@mixin powerpuff-line {
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(90deg, var(--blossom), var(--bubbles), var(--buttercup));
+  }
+}
