--- a/data-echoes/src/assets/scss/base.css
+++ b/data-echoes/src/assets/scss/base.css
@@ -62,19 +62,7 @@ body {
     color 0.5s,
     background-color 0.5s;
   line-height: 1.5;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
+  font-family: Poppins;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
