rework homepage layout

--- a/data-echoes/src/assets/scss/colors.scss
+++ b/data-echoes/src/assets/scss/colors.scss
@@ -1,5 +1,6 @@
 :root {
   --off-white: #eeeeee;
+  --off-white-70: #eeeeeebb;
   --off-white-50: #eeeeee55;
   --off-white-30: #eeeeee33;
   --off-white-10: #eeeeee11;
