--- a/data-echoes/src/assets/scss/molecules.scss
+++ b/data-echoes/src/assets/scss/molecules.scss
@@ -4,6 +4,13 @@
   }
 }
 
+@mixin center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @mixin powerpuff-line {
   &::after {
     content: '';
@@ -13,5 +20,23 @@
     bottom: 0;
     left: 0;
     background-image: linear-gradient(90deg, var(--blossom), var(--bubbles), var(--buttercup));
+  }
+}
+
+@mixin underline-hover {
+  &::after {
+    content: '';
+    position: absolute;
+    top: 90%;
+    left: 0;
+    height: 1px;
+    width: 100%;
+    background-color: var(--line-color, var(--off-white));
+    transform: scaleX(0);
+    transition: transform 0.5s ease-out;
+  }
+
+  &:hover:not(.disabled)::after {
+    transform: scaleX(1);
   }
 }
