WIP grown crops in provinces

--- a/data-echoes/src/components/culture/culture.scss
+++ b/data-echoes/src/components/culture/culture.scss
@@ -200,5 +200,5 @@
 }
 
 .theme-view, .culture-page {
-  background-color: var(--spice-135) !important;
+  background-color: rgb(165, 210, 163) !important;
 }
