--- a/data-echoes/src/components/culture/culture.scss
+++ b/data-echoes/src/components/culture/culture.scss
@@ -45,26 +45,28 @@
   // --spice-200: rgb(200, 151,  89);
 
   // // --spice-18: rgb( 18,  37,   8);
-  --spice-104: rgb(104, 152, 96);
-  --spice-224: rgb(224, 197, 165);
-  --spice-93: rgb(93, 77, 50);
-  --spice-198: rgb(198, 168, 131);
-  --spice-48: rgb(48, 72, 31);
-  --spice-135: rgb(135, 180, 133);
+  // --spice-104: rgb(104, 152, 96);
+  // --spice-224: rgb(224, 197, 165);
+  // --spice-93: rgb(93, 77, 50);
+  // --spice-198: rgb(198, 168, 131);
+  // --spice-174: rgb(174, 211, 187);
+  // --spice-137: rgb(137, 120, 82);
+  // --spice-135: rgb(135, 180, 133);
+
   --spice-kaffir-lime-leaf: rgb(74, 118, 62);
-  --spice-174: rgb(174, 211, 187);
-  --spice-137: rgb(137, 120, 82);
+  --spice-kaffir-lime-leaf-dark: rgb(48, 72, 31);
 
   // // --spice-57: rgb( 57,  29,  25);
   // --spice-196: rgb(196, 148, 106);
   // --spice-245: rgb(245, 231, 207);
   // --spice-91: rgb( 91,  56,  42);
   // --spice-122: rgb(122,  84,  62);
-  // --spice-99: rgb( 99,  15,  19);
+
   // --spice-31: rgb( 31,  21,  19);
   // --spice-225: rgb(225, 188, 145);
-  --spice-chili: rgb(165, 34, 29);
   // --spice-165: rgb(165, 110,  78);
+  --spice-chili: rgb(165, 34, 29);
+  --spice-chili-dark: rgb(31, 21, 19);
 
   // // --spice-29: rgb( 29,  25,  24);
   // --spice-220: rgb(220, 128, 113);
@@ -78,7 +80,7 @@
   // --spice-159: rgb(159,  15,  31);
 
   // // --spice-19: rgb( 19,  15,  14);
-  --spice-pepper: rgb(200, 184, 167);
+
   // --spice-104: rgb(104,  85,  72);
   // --spice-218: rgb(218, 205, 188);
   // --spice-42: rgb( 42,  32,  28);
@@ -87,9 +89,11 @@
   // --spice-180: rgb(180, 161, 144);
   // --spice-240: rgb(240, 232, 220);
   // --spice-157: rgb(157, 136, 119);
+  --spice-pepper: rgb(200, 184, 167);
+  --spice-pepper-dark: rgb(42, 32, 28);
 
   // // --spice-22: rgb( 22,  14,  10);
-  --spice-ginger: rgb(220, 185, 61);
+
   // --spice-141: rgb(141, 102,  68);
   // --spice-82: rgb( 82,  44,  26);
   // --spice-241: rgb(241, 222, 200);
@@ -98,6 +102,8 @@
   // --spice-214: rgb(214, 185, 137);
   // --spice-173: rgb(173, 141, 103);
   // --spice-116: rgb(116,  69,  39);
+  --spice-ginger: rgb(220, 185, 61);
+  --spice-ginger-dark: rgb(53, 29, 17);
 
   // // --spice-192: rgb(192, 183, 138);
   // --spice-72: rgb( 72,  53,  37);
@@ -107,22 +113,24 @@
   // --spice-39: rgb( 39,  38,  29);
   // --spice-121: rgb(121, 102,  63);
   // --spice-168: rgb(168, 154, 108);
-  --spice-bay-leaf: rgb(62, 91, 29);
   // --spice-218: rgb(218, 213, 174);
+  --spice-bay-leaf: rgb(62, 91, 29);
+  --spice-bay-leaf-dark: rgb(39, 38, 29);
 
   // --spice-44: rgb( 44,  31,  25);
   //  --spice-178: rgb(178,  66,  13);
   //  --spice-189: rgb(189, 161, 134);
-  --spice-turmeric: rgb(225, 123, 10);
   //  --spice-146: rgb(146, 119,  97);
   --spice-230: rgb(230, 209, 192);
   //  --spice-73: rgb( 73,  60,  51);
   //  --spice-110: rgb(110,  45,  21);
   //  --spice-12: rgb( 12,  12,  11);
   //  --spice-109: rgb(109,  87,  72);
+  --spice-turmeric: rgb(225, 123, 10);
+  --spice-turmeric-dark: rgb(73, 60, 51);
 
   // // --spice-9: rgb(  9,   7,   9);
-  --spice-candlenut: rgb(224, 184, 138);
+
   // --spice-149: rgb(149,  92,  58);
   // --spice-117: rgb(117,  63,  37);
   // --spice-252: rgb(252, 240, 211);
@@ -131,8 +139,9 @@
   // --spice-244: rgb(244, 214, 173);
   // --spice-50: rgb( 50,  19,  12);
   // --spice-86: rgb( 86,  37,  21);
+  --spice-candlenut: rgb(224, 184, 138);
+  --spice-candlenut-dark: rgb(50, 19, 12);
 
-  --spice-coriander: rgb(179, 120, 69);
   // --spice-24: rgb( 24,  19,  18);
   // --spice-94: rgb( 94,  39,  17);
   // --spice-227: rgb(227, 211, 177);
@@ -142,10 +151,11 @@
   // --spice-56: rgb( 56,  31,  18);
   // --spice-134: rgb(134,  78,  42);
   // --spice-130: rgb(130, 105,  81);
+  --spice-coriander: rgb(179, 120, 69);
+  --spice-coriander-dark: rgb(56, 31, 18);
 
   // // --spice-243: rgb(243, 241, 234);
   // --spice-182: rgb(182, 116,  71);
-  --spice-galangal: rgb(246, 220, 167);
   // --spice-155: rgb(155,  85,  47);
   // --spice-229: rgb(229, 187, 136);
   // --spice-111: rgb(111,  50,  31);
@@ -153,10 +163,11 @@
   //  --spice-205: rgb(205, 152, 102);
   // --spice-185: rgb(185, 172, 161);
   --spice-237: rgb(237, 226, 204);
+  --spice-galangal: rgb(246, 220, 167);
+  --spice-galangal-dark: rgb(111, 50, 31);
 
   // // --spice-31: rgb( 31,  24,  19);
   // --spice-162: rgb(162, 149, 139);
-  --spice-coconut: rgb(228, 219, 210);
   // --spice-110: rgb(110,  93,  81);
   // --spice-80: rgb( 80,  61,  52);
   // --spice-138: rgb(138, 122, 111);
@@ -164,6 +175,8 @@
   // --spice-183: rgb(183, 173, 164);
   // --spice-54: rgb( 54,  37,  30);
   // --spice-246: rgb(246, 245, 241);
+  --spice-coconut: rgb(228, 219, 210);
+  --spice-coconut-dark: rgb(54, 37, 30);
 
   // // --spice-42: rgb( 42,  69,  35);
   // --spice-126: rgb(126, 154,  61);
@@ -174,21 +187,22 @@
   // --spice-83: rgb( 83, 109,  44);
   // --spice-79: rgb( 79,  45,  27);
   --spice-lemongrass: rgb(179, 177, 89);
-  // --spice-27: rgb( 27,  31,  25);
+  --spice-lemongrass-dark: rgb(27, 31, 25);
 
   // // --spice-104: rgb(104, 141,   8);
   // --spice-116: rgb(116,  89,  72);
   // --spice-90: rgb( 90,  56,  42);
   // --spice-239: rgb(239, 233, 213);
   // --spice-224: rgb(224, 189, 141);
-  --spice-tamarind: rgb(55, 29, 23);
   // --spice-187: rgb(187, 154, 119);
   // --spice-20: rgb( 20,  13,  19);
   // --spice-170: rgb(170,  97,  52);
   // --spice-153: rgb(153, 123,  96);
+  --spice-tamarind: rgb(55, 29, 23);
+  --spice-tamarind-dark: rgb(20, 13, 19);
 
   // --spice-246: rgb(246, 238, 231);
-  --spice-nutmeg: rgb(142, 78, 58);
+
   //  --spice-159: rgb(159, 148, 140);
   //  --spice-195: rgb(195, 179, 168);
   //  --spice-83: rgb( 83,  80,  75);
@@ -196,12 +210,16 @@
   //  --spice-87: rgb( 87,  44,  32);
   //  --spice-222: rgb(222, 208, 197);
   //  --spice-192: rgb(192, 129, 103);
-  //  --spice-38: rgb( 38,  33,  28);
+  --spice-nutmeg: rgb(142, 78, 58);
+  --spice-nutmeg-dark: rgb(38, 33, 28);
 
   --spice-peanut: rgb(167, 71, 50);
 
   --bg-1: rgb(81, 104, 99);
   --bg-2: rgb(15, 60, 48);
+
+  --bg-1-70: rgba(81, 104, 99, 0.7);
+  --bg-2-70: rgba(15, 60, 48, 0.7);
 }
 
 .theme-view {
