--- a/data-echoes/src/components/movies/movies.scss
+++ b/data-echoes/src/components/movies/movies.scss
@@ -57,3 +57,7 @@
   width: 1.25rem;
   aspect-ratio: 1;
 }
+
+.won-shadow {
+  filter: drop-shadow(0 0 0.2rem var(--gold-light)) drop-shadow(0 0 0.4rem var(--gold-light));
+}
