--- a/data-echoes/src/assets/scss/colors.scss
+++ b/data-echoes/src/assets/scss/colors.scss
@@ -6,6 +6,8 @@
   --off-white-10: #eeeeee11;
 
   --off-black: #101010;
+  --off-black-50: hsla(0, 0%, 6%, 0.5);
+  --off-black-10: hsla(0, 0%, 6%, 0.1);
 
   --home-yellow: rgba(208, 169, 52, 1);
   --home-yellow-80: rgba(208, 169, 52, 0.8);
