--- a/data-echoes/src/assets/scss/colors.scss
+++ b/data-echoes/src/assets/scss/colors.scss
@@ -7,6 +7,7 @@
 
   --off-black: #101010;
   --off-black-50: hsla(0, 0%, 6%, 0.5);
+  --off-black-30: hsla(0, 0%, 6%, 0.3);
   --off-black-10: hsla(0, 0%, 6%, 0.1);
 
   --home-yellow: rgba(208, 169, 52, 1);
