add nostalgia annotations

--- a/data-echoes/src/assets/scss/molecules.scss
+++ b/data-echoes/src/assets/scss/molecules.scss
@@ -4,6 +4,12 @@
   }
 }
 
+@mixin low-screen {
+  @media screen and (max-height: 700px) {
+    @content;
+  }
+}
+
 @mixin center {
   position: absolute;
   top: 50%;
