--- a/data-echoes/src/components/movies/movies.scss
+++ b/data-echoes/src/components/movies/movies.scss
@@ -9,8 +9,8 @@
   --red: #981608;
   --gold: #eead2b;
   --gold-light: #fffbf3;
-  --silver: #9b928c;
-  --silver-light: #bdb2aa;
+  --silver: #b6aea9;
+  --silver-light: #c9c1bb;
 
   --african: var(--black);
   --asian: color-mix(in srgb, var(--black) 20%, var(--white));
